Релиз v1.0.13 - Добавлена возможность изменения placeholder'а для пустого выпадающего меню - Исправлена ошибка при которой не получалось выбрать параметр с помощью мыши

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <component is="multiselect"
                        :all-values="['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']"
                        value="Thursday"
+                       no-results-placeholder="123"
             ></component>
         </div>
     </div>
