--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <div class="row">
         <div class="col-md-6 ml-auto mr-auto">
             <div class="form-group">
-                <input type="text" class="form-control" disabled placeholder="132">
                 <label>Simple select</label>
                 <div @click="disabled0 = !disabled0">click</div>
                 <component is="multiselect" :default="{
@@ -172,74 +171,30 @@
                             }"
                            :is-multi="false"
                            :disabled="true"
-                           value="123"
+                           value="Monday"
+                ></component>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="form-group">
+                <label>Value is key</label>
+                <component is="multiselect" :default="{
+                                Monday: 'Monday',
+                                Tuesday: 'Tuesday',
+                                Wednesday:'Wednesday',
+                                Thursday: 'Thursday',
+                                Friday: 'Friday',
+                                Saturday: 'Saturday',
+                                Sunday: 'Sunday'
+                            }"
+                           :is-multi="false"
+                           value="Monday"
                 ></component>
             </div>
         </div>
     </div>
 </div>
 
-<div id="vue" class="mt-5">
-    <h3 class="text-center">Remove components</h3>
-    <!-- Simple select -->
-    <div class="row">
-        <div class="col-8 ml-auto mr-auto">
-            <label>Simple select</label>
-            <component is="multiselect"
-                       :all-values="['One', 'Two', 'Three', 'Four','5', '6', '7', '8','9', '10', '11', '12', '13','14', '15', '16', '17']"
-                       value="One"
-            ></component>
-        </div>
-    </div>
-
-    <!-- Multiselect -->
-    <div class="row">
-        <div class="col-8 ml-auto mr-auto">
-            <label>Multiselect</label>
-            <component is="multiselect"
-                       :is-multi="true"
-                       :is-search="false"
-                       :all-values="['One', 'Two', 'Three', 'Four']"
-                       value="One"
-            ></component>
-        </div>
-    </div>
-
-    <!-- Multiselect with search -->
-    <div class="row">
-        <div class="col-8 ml-auto mr-auto">
-            <label>Multiselect with search</label>
-            <component is="multiselect"
-                       :is-multi="true"
-                       :all-values="['One', 'Two', 'Three', 'Four']"
-                       value="One"
-            ></component>
-        </div>
-    </div>
-
-    <!-- Async data from server -->
-    <div class="row">
-        <div class="col-8 ml-auto mr-auto">
-            <label>Async data from server</label>
-            <component is="multiselect"
-                       :is-multi="true"
-                       async-search-url="https://api.mockaroo.com/api/0bb305f0?count=5&key=f2eb7950"
-                       :all-values="['One', 'Two', 'Three', 'Four']"
-                       value="One"
-            ></component>
-            <small class="text-muted">* Unfortunately, the data generation server does not support searching.
-                This search will not work here
-            </small>
-        </div>
-    </div>
-
-    <script>
-      var app = new window.Vue({
-        el: '#vue',
-        components: {multiselect: window.VueBootstrapMultiselect}
-      })
-    </script>
-</div>
 <!-- built files will be auto injected -->
 </body>
 </html>
